kubernetes-dashboard/kubernetes-dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: kubernetes-ui-auth
spec:
  rules:
  - host: kubernetes.example.org
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
